# urlclaw

./: .dockerignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: docker-publish.yml
urlclaw-core/: Cargo.toml
urlclaw-core/migrations/: 20220908194412_initial.sql
urlclaw-core/src/: lib.rs  models.rs  service.rs
urlclaw-core/src/repository/: memory.rs  mod.rs  sqlx.rs
urlclaw-server/: Cargo.toml
urlclaw-server/src/: auth.rs  main.rs
urlclaw-server/templates/: base.html  created.html  index.html
