[package]
name = "urlclaw-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
thiserror = "1"
uuid = { version = "1.1", features = ["v4"] }

[dev-dependencies]
# for async test execution
tokio = { version = "1", features = ["rt", "macros"] }
