[package]
name = "urlclaw-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
thiserror = "1"
url = "2"
uuid = { version = "1.1", features = ["v4"] }

sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "migrate"] }

[dev-dependencies]
# for async test execution
tokio = { version = "1", features = ["rt", "macros"] }
