[package]
name = "urlclaw-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
urlclaw-core = { path = "../urlclaw-core" }

axum = "0.5"
axum-macros = "0.2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
askama = "0.11.1"
