[package]
name = "urlclaw-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
urlclaw-core = { path = "../urlclaw-core" }

axum = "0.5"
axum-extra = { version = "0.3", features = ["cookie", "cookie-signed"] }
axum-macros = "0.2"
base64 = "0.13"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
askama = "0.11.1"
url = "2.3"
time = "0.3"

openidconnect = { version = "2.3", features = ["accept-rfc3339-timestamps"] }
